<resources>
    <string name="app_name">cz2006KACHINGX</string>
    <string name="title_exchange">Exchange</string>
    <string name="title_showmap">Map</string>
    <string name="title_displayratechart">Rate</string>
    <string name="title_index">Home</string>
    <string name="title_showprof">Profile</string>

    <string name="title_activity__wlcpage">Activity_Wlcpage</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="title_activity_wlc_page">Activity_wlcPage</string>
    <string name="title_activity_page_1">Page_1</string>

    <string name="byrate">Sort by Rate</string>
    <string name="byloc">Sort by Location</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
