<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navbottom_indexpage"
        android:icon="@drawable/ic_baseline_index_24px"
        android:title="@string/title_index" />

    <item
        android:id="@+id/navbottom_showmap"
        android:icon="@drawable/ic_baseline_add_location_24px"
        android:title="@string/title_showmap" />

    <item
        android:id="@+id/navbottom_displayratechart"
        android:icon="@drawable/ic_baseline_insert_chart_outlined_24px"
        android:title="@string/title_displayratechart" />

    <item
        android:id="@+id/navbottom_exchange"
        android:icon="@drawable/ic_baseline_transform_24px"
        android:title="@string/title_exchange"/>

    <item
        android:id="@+id/navbottom_showprof"
        android:icon="@drawable/ic_baseline_person_24px"
        android:title="@string/title_showprof" />

</menu>
